--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.4",
     "delete-all-cookies": "^0.3.0",
     "ec-key": "^0.0.4",
+    "gh-pages": "^3.2.3",
     "i18next": "^20.2.3",
     "jsqr": "^1.4.0",
     "pickerjs": "^1.2.1",
@@ -28,7 +29,7 @@
     "react-modal": "^3.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.1",
     "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
