backhomesafe: package: specify this is a fork in version
Signed-off-by: Wiley Lau <henloboii@protonmail.ch>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "back-home-safe",
-  "version": "1.4.1-uno",
+  "version": "fork-1.4.1",
   "private": true,
   "homepage": "https://jamiehoszeyui.github.io/back-home-safe/",
   "repository": "https://github.com/JamieHoSzeYui/back-home-safe",
